Implement depot-compliant notes generation

--- a/output.html
+++ b/output.html
@@ -28,92 +28,108 @@
         <pre class="output-content api-output" id="api-output" data-status="idle">Press “Send to Survey Brain” to generate structured notes.</pre>
       </section>
 
+      <section class="output-card" aria-labelledby="outputNeeds">
+        <div class="output-card-head">
+          <h2 id="outputNeeds">Needs</h2>
+          <button type="button" class="copy-button" data-output-key="Needs">Copy</button>
+        </div>
+        <pre class="output-content" data-output-field="Needs"></pre>
+      </section>
+
       <section class="output-card" aria-labelledby="outputWorkingHeights">
         <div class="output-card-head">
           <h2 id="outputWorkingHeights">Working at heights</h2>
-          <button type="button" class="copy-button" data-output-key="workingAtHeights">Copy</button>
+          <button type="button" class="copy-button" data-output-key="WorkingAtHeights">Copy</button>
         </div>
-        <pre class="output-content" data-output-field="workingAtHeights"></pre>
+        <pre class="output-content" data-output-field="WorkingAtHeights"></pre>
       </section>
 
       <section class="output-card" aria-labelledby="outputSystemCharacteristics">
         <div class="output-card-head">
           <h2 id="outputSystemCharacteristics">System characteristics</h2>
-          <button type="button" class="copy-button" data-output-key="systemCharacteristics">Copy</button>
+          <button type="button" class="copy-button" data-output-key="SystemCharacteristics">Copy</button>
         </div>
-        <pre class="output-content" data-output-field="systemCharacteristics"></pre>
+        <pre class="output-content" data-output-field="SystemCharacteristics"></pre>
       </section>
 
       <section class="output-card" aria-labelledby="outputAssistance">
         <div class="output-card-head">
           <h2 id="outputAssistance">Components that require assistance</h2>
-          <button type="button" class="copy-button" data-output-key="assistanceComponents">Copy</button>
+          <button type="button" class="copy-button" data-output-key="ComponentsAssistance">Copy</button>
         </div>
-        <pre class="output-content" data-output-field="assistanceComponents"></pre>
+        <pre class="output-content" data-output-field="ComponentsAssistance"></pre>
       </section>
 
-      <section class="output-card" aria-labelledby="outputRestrictions">
+      <section class="output-card" aria-labelledby="outputPermissions">
         <div class="output-card-head">
-          <h2 id="outputRestrictions">Restrictions to work</h2>
-          <button type="button" class="copy-button" data-output-key="restrictions">Copy</button>
+          <h2 id="outputPermissions">Permissions</h2>
+          <button type="button" class="copy-button" data-output-key="Permissions">Copy</button>
         </div>
-        <pre class="output-content" data-output-field="restrictions"></pre>
+        <pre class="output-content" data-output-field="Permissions"></pre>
       </section>
 
       <section class="output-card" aria-labelledby="outputHazards">
         <div class="output-card-head">
-          <h2 id="outputHazards">External hazards</h2>
-          <button type="button" class="copy-button" data-output-key="externalHazards">Copy</button>
+          <h2 id="outputHazards">Hazards</h2>
+          <button type="button" class="copy-button" data-output-key="Hazards">Copy</button>
         </div>
-        <pre class="output-content" data-output-field="externalHazards"></pre>
+        <pre class="output-content" data-output-field="Hazards"></pre>
       </section>
 
-      <section class="output-card" aria-labelledby="outputNewBoiler">
+      <section class="output-card" aria-labelledby="outputDelivery">
         <div class="output-card-head">
-          <h2 id="outputNewBoiler">New boiler and controls</h2>
-          <button type="button" class="copy-button" data-output-key="newBoilerAndControls">Copy</button>
+          <h2 id="outputDelivery">Delivery</h2>
+          <button type="button" class="copy-button" data-output-key="Delivery">Copy</button>
         </div>
-        <pre class="output-content" data-output-field="newBoilerAndControls"></pre>
+        <pre class="output-content" data-output-field="Delivery"></pre>
+      </section>
+
+      <section class="output-card" aria-labelledby="outputOffice">
+        <div class="output-card-head">
+          <h2 id="outputOffice">Office</h2>
+          <button type="button" class="copy-button" data-output-key="Office">Copy</button>
+        </div>
+        <pre class="output-content" data-output-field="Office"></pre>
+      </section>
+
+      <section class="output-card" aria-labelledby="outputBoilerControls">
+        <div class="output-card-head">
+          <h2 id="outputBoilerControls">Boiler and controls</h2>
+          <button type="button" class="copy-button" data-output-key="BoilerAndControls">Copy</button>
+        </div>
+        <pre class="output-content" data-output-field="BoilerAndControls"></pre>
       </section>
 
       <section class="output-card" aria-labelledby="outputFlue">
         <div class="output-card-head">
           <h2 id="outputFlue">Flue</h2>
-          <button type="button" class="copy-button" data-output-key="flue">Copy</button>
+          <button type="button" class="copy-button" data-output-key="Flue">Copy</button>
         </div>
-        <pre class="output-content" data-output-field="flue"></pre>
+        <pre class="output-content" data-output-field="Flue"></pre>
       </section>
 
       <section class="output-card" aria-labelledby="outputPipework">
         <div class="output-card-head">
           <h2 id="outputPipework">Pipe work</h2>
-          <button type="button" class="copy-button" data-output-key="pipework">Copy</button>
+          <button type="button" class="copy-button" data-output-key="PipeWork">Copy</button>
         </div>
-        <pre class="output-content" data-output-field="pipework"></pre>
+        <pre class="output-content" data-output-field="PipeWork"></pre>
       </section>
 
       <section class="output-card" aria-labelledby="outputDisruption">
         <div class="output-card-head">
           <h2 id="outputDisruption">Disruption</h2>
-          <button type="button" class="copy-button" data-output-key="disruption">Copy</button>
+          <button type="button" class="copy-button" data-output-key="Disruption">Copy</button>
         </div>
-        <pre class="output-content" data-output-field="disruption"></pre>
+        <pre class="output-content" data-output-field="Disruption"></pre>
       </section>
 
       <section class="output-card" aria-labelledby="outputCustomerActions">
         <div class="output-card-head">
-          <h2 id="outputCustomerActions">Customer agreed actions</h2>
-          <button type="button" class="copy-button" data-output-key="customerAgreedActions">Copy</button>
+          <h2 id="outputCustomerActions">Customer actions</h2>
+          <button type="button" class="copy-button" data-output-key="CustomerActions">Copy</button>
         </div>
-        <pre class="output-content" data-output-field="customerAgreedActions"></pre>
-      </section>
-
-      <section class="output-card" aria-labelledby="outputAdditional">
-        <div class="output-card-head">
-          <h2 id="outputAdditional">Additional</h2>
-          <button type="button" class="copy-button" data-output-key="additional">Copy</button>
-        </div>
-        <pre class="output-content" data-output-field="additional"></pre>
+        <pre class="output-content" data-output-field="CustomerActions"></pre>
       </section>
     </main>
   </div>
@@ -127,60 +143,35 @@
         return;
       }
 
-      const sections = NotesEngine.buildFromPlanner() || {};
-      const headingMap = {
-        Flue: 'Flue',
-        Gas: 'Pipe work',
-        Condensate: 'Disruption',
-        SummaryChange: 'System characteristics',
-        SystemChanges: 'Additional',
-        HotWater: 'New boiler and controls',
-        LocationAndMakingGood: 'Additional',
-        Controls: 'New boiler and controls',
-        HouseKeeping: 'Disruption'
-      };
+      const sections = window.NotesEngine.buildFromPlanner() || {};
+      const keys = window.NotesEngine.SECTION_KEYS || Object.keys(sections);
 
-      const aggregated = {};
-      Object.entries(headingMap).forEach(([engineKey, headingText]) => {
-        const lines = sections[engineKey];
-        if (!Array.isArray(lines) || !lines.length) {
-          return;
-        }
-        if (!aggregated[headingText]) {
-          aggregated[headingText] = [];
-        }
-        aggregated[headingText].push(...lines);
-      });
-
-      function findHeadingByText(text) {
-        const headings = Array.from(document.querySelectorAll('h2, h3, h4'));
-        return headings.find(heading => heading.textContent.trim().toLowerCase() === text.toLowerCase());
-      }
-
-      function ensureNotesArea(sectionEl) {
-        if (!sectionEl) {
+      function ensureNotesArea(preElement, key) {
+        if (!preElement) {
           return null;
         }
-        let textarea = sectionEl.querySelector('textarea.notes-engine-output');
+        const container = preElement.parentElement;
+        if (!container) {
+          return null;
+        }
+        let textarea = container.querySelector(`textarea.notes-engine-output[data-notes-section="${key}"]`);
         if (!textarea) {
           textarea = document.createElement('textarea');
           textarea.className = 'notes-engine-output';
           textarea.rows = 8;
           textarea.spellcheck = false;
+          textarea.dataset.notesSection = key;
           textarea.style.width = '100%';
           textarea.style.marginTop = '12px';
-          const reference = sectionEl.querySelector('.output-content');
-          if (reference) {
-            sectionEl.insertBefore(textarea, reference);
-          } else {
-            sectionEl.appendChild(textarea);
-          }
-          let copyButton = sectionEl.querySelector('button.notes-engine-copy');
+          container.insertBefore(textarea, preElement);
+
+          let copyButton = container.querySelector(`button.notes-engine-copy[data-notes-section="${key}"]`);
           if (!copyButton) {
             copyButton = document.createElement('button');
             copyButton.type = 'button';
             copyButton.textContent = 'Copy notes';
             copyButton.className = 'copy-button notes-engine-copy';
+            copyButton.dataset.notesSection = key;
             copyButton.style.margin = '6px 0 12px';
             copyButton.addEventListener('click', () => {
               textarea.select();
@@ -192,78 +183,44 @@
         return textarea;
       }
 
-      Object.entries(aggregated).forEach(([headingText, lines]) => {
-        const headingEl = findHeadingByText(headingText);
-        if (!headingEl) {
-          return;
+      keys.forEach((key) => {
+        const lines = Array.isArray(sections[key]) && sections[key].length
+          ? sections[key]
+          : ['↘️ None recorded;'];
+        const target = document.querySelector(`[data-output-field="${key}"]`);
+        const textarea = ensureNotesArea(target, key);
+        if (textarea) {
+          textarea.value = lines.join('\n');
         }
-        const sectionEl = headingEl.closest('.output-card') || headingEl.parentElement;
-        const textarea = ensureNotesArea(sectionEl);
-        if (!textarea) {
-          return;
-        }
-        textarea.value = lines.join('\n');
       });
 
-      if (Array.isArray(sections.SummaryChange) && sections.SummaryChange.length) {
-        const grid = document.querySelector('.output-grid');
-        if (grid) {
-          const summaryCard = document.createElement('section');
-          summaryCard.className = 'output-card notes-summary-card';
-          const head = document.createElement('div');
-          head.className = 'output-card-head';
-          const heading = document.createElement('h2');
-          heading.textContent = 'Summary Change';
-          head.appendChild(heading);
-          summaryCard.appendChild(head);
-          const textarea = document.createElement('textarea');
-          textarea.className = 'notes-engine-output';
-          textarea.rows = 4;
-          textarea.spellcheck = false;
-          textarea.style.width = '100%';
-          textarea.style.marginTop = '12px';
-          textarea.value = sections.SummaryChange.join('\n');
-          summaryCard.appendChild(textarea);
-          const copyButton = document.createElement('button');
-          copyButton.type = 'button';
-          copyButton.textContent = 'Copy notes';
-          copyButton.className = 'copy-button notes-engine-copy';
-          copyButton.style.margin = '6px 0 12px';
-          copyButton.addEventListener('click', () => {
-            textarea.select();
+      if (!document.querySelector('.notes-copy-all-button')) {
+        const shell = document.querySelector('.output-shell');
+        if (shell) {
+          const button = document.createElement('button');
+          button.type = 'button';
+          button.textContent = 'Copy All Notes';
+          button.className = 'copy-button notes-copy-all-button';
+          button.style.margin = '20px 0';
+          button.addEventListener('click', () => {
+            const textareas = Array.from(document.querySelectorAll('textarea.notes-engine-output'));
+            const combined = textareas.map(t => t.value.trim()).filter(Boolean).join('\n');
+            if (!combined) {
+              return;
+            }
+            const temp = document.createElement('textarea');
+            temp.style.position = 'fixed';
+            temp.style.left = '-9999px';
+            temp.value = combined;
+            document.body.appendChild(temp);
+            temp.select();
             document.execCommand('copy');
+            document.body.removeChild(temp);
+            alert('All sections copied');
           });
-          summaryCard.appendChild(copyButton);
-          grid.insertBefore(summaryCard, grid.firstChild);
+          shell.appendChild(button);
         }
       }
-    })();
-  </script>
-  <script>
-    (function(){
-      const shell = document.querySelector('.output-shell');
-      if (!shell || shell.querySelector('.notes-copy-all-button')) {
-        return;
-      }
-      const button = document.createElement('button');
-      button.type = 'button';
-      button.textContent = 'Copy All Notes';
-      button.className = 'copy-button notes-copy-all-button';
-      button.style.margin = '20px 0';
-      button.addEventListener('click', () => {
-        const textareas = Array.from(document.querySelectorAll('textarea.notes-engine-output'));
-        const combined = textareas.map(t => t.value.trim()).filter(Boolean).join('\n');
-        const temp = document.createElement('textarea');
-        temp.style.position = 'fixed';
-        temp.style.left = '-9999px';
-        temp.value = combined;
-        document.body.appendChild(temp);
-        temp.select();
-        document.execCommand('copy');
-        document.body.removeChild(temp);
-        alert('All sections copied');
-      });
-      shell.appendChild(button);
     })();
   </script>
   <!-- Depot Router: paste near </body> -->
